adjusted alignment issues with mobile

--- a/css/main.css
+++ b/css/main.css
@@ -247,6 +247,8 @@ a:focus {
     width: 100%;
     height: 80%;
 
+    padding-top: 200px;
+
     text-align: center;
     background-color: #90caf9;
     background-size: cover;
@@ -256,11 +258,6 @@ a:focus {
     background-repeat: no-repeat;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-         -o-animation: fadein 2s; /* Opera < 12.1 */
-            animation: fadein 2s;
 }
 
 
@@ -268,13 +265,13 @@ a:focus {
 #projects {
     width: 100%;
     height: 100%;
+    padding-top: 200px;
     padding-left: 100px 0;
     padding-right: 100px 0;
     background-color: #00E676;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
-
 
 #contact {
     width: 100%;
@@ -294,44 +291,6 @@ a:focus {
     font-size: 10px;
 	color: green;
 
-}
-
-@media(min-width:767px) {
-    .content-section {
-        padding-top: 250px;
-    }
-
-    .download-section {
-        padding: 100px 0;
-    }
-
-    #map {
-        height: 400px;
-        margin-top: 250px;
-    }
-}
-
-
-ul.banner-social-buttons {
-    margin-top: 0;
-}
-
-@media(max-width:1199px) {
-    ul.banner-social-buttons {
-        margin-top: 15px;
-    }
-}
-
-@media(max-width:767px) {
-    ul.banner-social-buttons li {
-        display: block;
-        margin-bottom: 20px;
-        padding: 0;
-    }
-
-    ul.banner-social-buttons li:last-child {
-        margin-bottom: 0;
-    }
 }
 
 .fa-facebook-square {
@@ -365,7 +324,7 @@ footer p {
     background: rgba(256,256,256,1);
 }
 .messenger {
-    width: 750px;
+    width: 50%;
     margin: 0 auto;
     margin-top: 30px;
     text-align: left;
@@ -387,31 +346,3 @@ footer p {
 	border-color: black;
 }
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
